# IOC_GaiaLib

./: .gitignore  CATALOG_DOWNLOADS.md  CHANGELOG.md  CMakeLists.txt  CTestTestfile.cmake  IAU_Integration_Summary.md  IOC_GaiaLibConfig.cmake  LICENSE  MIGRATION_GUIDE.md  Makefile  README.md  complete_performance_benchmark  comprehensive_test_suite  config_compressed.json  config_multifile.json  config_online.json  debug_compressed_id  debug_star_id
cmake/: IOC_GaiaLibConfig.cmake.in
data/: IAU-CSN.txt  common_star_names.csv
docs/: API_GUIDE.md  GAIA_MAG18_CATALOG.md  GAIA_MAG18_CATALOG_V2.md  GAIA_SYSTEM_SUMMARY.md  GRAPPA3E_IMPLEMENTATION.md  INDEX.md  INTEGRATION_GUIDE.md  MAG18_IMPROVEMENTS.md  MAG18_PERFORMANCE_ANALYSIS.md  MAG18_QUICKSTART.md  MAG18_V2_QUICKSTART.md  MAG18_V2_QUICK_START.md  THREAD_SAFETY.md  UNIFIED_API.md  V2_PERFORMANCE.md
examples/: CMakeLists.txt  Makefile  analyze_mag18  analyze_mag18.cpp  build_mag18_catalog  build_mag18_catalog.cpp  build_mag18_catalog_v2  build_mag18_catalog_v2.cpp  build_v2_from_v1.cpp  compile_catalog  compile_catalog.cpp  complete_performance_benchmark.cpp  comprehensive_local_test  comprehensive_local_test.cpp  comprehensive_test_suite.cpp  concurrency_test  concurrency_test.cpp  concurrent_comparison  concurrent_comparison.cpp  create_multifile_v2  create_multifile_v2.cpp  create_smart_multifile_v2  create_smart_multifile_v2.cpp  cross_match_demo  cross_match_demo.cpp  debug_magnitude.cpp  debug_multifile  debug_multifile.cpp  decompress_v2_catalog  decompress_v2_catalog.cpp  deprecation_test  deprecation_test.cpp  final_validation  final_validation.cpp  iau_integration_test  iau_integration_test.cpp  integration_test  integration_test.cpp  migration_guide  migration_guide.cpp  (+66 more)
examples/minimal_example/: CMakeLists.txt  README.md  main.cpp
include/ioc_gaialib/: catalog_compiler.h  common_star_names.h  concurrent_multifile_catalog_v2.h  gaia_cache.h  gaia_catalog.h  gaia_client.h  gaia_local_catalog.h  gaia_mag18_catalog.h  gaia_mag18_catalog_v2.h  gaia_sqlite_catalog.h  grappa_reader.h  iau_star_catalog_parser.h  multifile_catalog_v2.h  types.h  unified_gaia_catalog.h
scripts/: download_grappa3e.sh  setup.sh
src/: catalog_compiler.cpp  common_star_names.cpp  concurrent_multifile_catalog_v2.cpp  gaia_cache.cpp  gaia_catalog.cpp  gaia_client.cpp  gaia_local_catalog.cpp  gaia_local_catalog_old.cpp  gaia_mag18_catalog.cpp  gaia_mag18_catalog_v2.cpp  gaia_sqlite_catalog.cpp  grappa_reader.cpp  iau_star_catalog_parser.cpp  multifile_catalog_v2.cpp  types.cpp  unified_gaia_catalog.cpp
tools/: debug_compressed_id.cpp  debug_star_id.cpp  rebuild_healpix_index.cpp  test_corridor.cpp  test_query_cone.cpp
